# video_experiments_rust

./: .gitignore  README.md  index.html  index.pck
.github/workflows/: deploy.yml
countdown/: Cargo.toml
countdown/src/: main.rs
kaleidoscope-dioxus/: Cargo.toml  Dioxus.toml
kaleidoscope-dioxus/assets/: main.css
kaleidoscope-dioxus/src/: kaleidoscope.rs  main.rs
kaleidoscope-godot/: README.md  export_presets.cfg  icon.svg.import  kaleidoscope.gd  kaleidoscope.gd.uid  kaleidoscope.gdshader  kaleidoscope.gdshader.uid  node_2d.tscn  project.godot
kaleidoscope-p5js/: README.md  index.html  sketch.js
kaleidoscope-p5js/assets/: basic.frag
kaleidoscope-rust/: Cargo.toml  README.md
kaleidoscope-rust/src/: main.rs
rust-webm-av1-vp9/: README.md
rust-webm-av1-vp9/encode-av1-mp4/: Cargo.toml  README.md
rust-webm-av1-vp9/encode-av1-mp4/src/: main.rs
rust-webm-av1-vp9/encode-av1-webm/: Cargo.toml  README.md  output.webm
rust-webm-av1-vp9/encode-av1-webm/src/: main.rs
rust-webm-av1-vp9/encode-vpx-webm/: Cargo.toml  README.md  output.obu  output.webm
rust-webm-av1-vp9/encode-vpx-webm/src/: main.rs
