[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["David Rasch <David.Rasch@cwi.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dioxus = { version = "0.7.1", features = [] }
image = "0.25.9"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
